style.css
@import url('https://fonts.googleapis.com/css2?family=Fustat:wght@200..800&display=swap');

/* General Page Styles */
body, html {
	font-family: "Fustat", "Helvetica", sans-serif;
	color: white;
	background-color: #171717;
	overflow-x:hidden;
	width: 100%;
	min-width: 100%;
	max-width: 100%;
	height:100vh;
	padding: 0;
	margin: 0;
	display:flex;
	flex-direction:column;
	justify-content: center;
	align-items: center;
	}

h1 {
	margin:0;
	padding:0;
}


* {
    box-sizing: border-box; /* Include padding and border in element's width/height */
	font-family: "Fustat", "Helvetica", sans-serif;
}

p {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

a, a:visited {
	color:inherit;
	text-decoration: none;
}

/* Player Container */
header {
	background-color: #171717;
	width: 50%;
	max-width: 50%;
	height:auto;
	display:flex;
	margin:0 auto;
	flex-direction: column;
	justify-content: center;
	align-items: left;
	gap:15px;
}

header > button.play-pause {
	cursor:pointer;
	font-size:1em;
	background-color: #f3c887;
	color: #171717;
	border: 0;
	padding: 0.6em 1em;
	border-radius: 4px;
	font-family:'Fustat', "Helvetica", sans-serif;
}

.actions {
	width: 50%;
	max-width: 50%;
	display:flex;
	flex-direction:row;
	flex-wrap: wrap;
	justify-content: start;
	align-items: start;
	gap:2em;
}

.actions > button, .actions > a {
	font-family: 'Fustat', "Helvetica", sans-serif;
	font-size:1em;
	font-weight: bold;;
	background-color: transparent;
	color: #f3c887;
	border: 0;
	padding: 0.6em 0em;
	cursor: pointer;
	border-bottom:2px solid #f3c887;
}

.player-container {
	gap: 5px;
	box-sizing: border-box;
	display: flex;
	align-items: center;
	justify-content: space-around;
	flex-direction: column;
	position: fixed;
	bottom:25px;
	left:0;
	width:100%;
	max-width:100%;
	z-index: 10;
}

/* Modal Styles */
#song-modal {
	display:flex;
	gap:10px;
	align-items: center;	
	border-radius:4px;
	padding: 15px;
	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
	backdrop-filter: blur(3px);
	background-color: #f3c887;
	color:#1e1e1e;
	text-align:left;
	width:33%;
	max-height:120px;
	height:120px;
	opacity:0;
	transform: translateY(120px);
	transition: all 0.2s ease-in;
}

#song-modal.show {
	opacity:1;
	transform: translateY(-50px);
}

#song-art {
	border-radius:4px;
	height:100%;
	width:auto;
	box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
}

.song-details {
	display:flex;
	flex-direction: column;
	width:100%;
}

#song-title {
	font-size:18px;
	font-weight:bold;
	width:80%;
	max-width:80%;
}

#song-artist {
	font-size:16px;
	width:80%;
	max-width:80%;
	
}

#song-disclaimer {
	margin-top:12px;
	font-size:10px;
	text-transform: uppercase;
}


.controls {
	font-family: 'Fustat', "Helvetica", sans-serif;
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 22px;
	max-width:33%;
	width:33%;
	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
	backdrop-filter: blur(6px);
	background-color: #FEE1C7;
	color:#fff;
	border-radius: 4px;
	height:15vh;
}

/* ----------------------- RESPONSIVE STYLES -----------------------*/

@media (max-width: 820px) {

	body {
		margin:0;
		padding:0;
	}
	
	header {
		width:100%;
		max-width:100%;
		padding:2.5vw;
	}

	#song-modal {
		width: 95%;
		max-width: 95%;
	}

	.actions {
		position:fixed;
		bottom:0;
		left:0;
		width:100%;
		max-width:100%;
		z-index:10;
		flex-wrap:nowrap;
		justify-content:space-around;
		align-items:center;
		background-color: #f3c887;
		
	}

	.actions > button, .actions > a {
		width:33%;
		max-width:33%;
		border:0;
		color:#171717;
		text-align:center;
	}

}

